# theZzz

./: .contemporary.json  .gitignore  .parlance.json  CMakeLists.txt
.github/workflows/: macos.yml  win.yml
application/: CMakeLists.txt  Info.plist.in  com.vicr123.thezzz.desktop  com.vicr123.thezzz_blueprint.desktop  landingpage.cpp  landingpage.h  landingpage.ui  main.cpp  mainwindow-mac.mm  mainwindow.cpp  mainwindow.h  mainwindow.ui
application/commandpalette/: commandpaletterequestsscope.cpp  commandpaletterequestsscope.h
application/translations/: en_US.ts  vi_VN.ts
application/translations/apple-lproj/en_US.lproj/: InfoPlist.strings
application/translations/apple-lproj/vi_VN.lproj/: InfoPlist.strings
application/translations/desktop/com.vicr123.thezzz/: en.json
application/translations/desktop/com.vicr123.thezzz_blueprint/: en.json
libthezzz/: CMakeLists.txt  forwarddeclares.h  libthezzzConfig.cmake.in  libthezzz_global.h  libthezzz_icons.qrc  workspacefile.cpp  workspacefile.h  zzzhelpers.cpp  zzzhelpers.h  zzznetworkcache.cpp  zzznetworkcache.h  zzzreply.cpp  zzzreply.h  zzzreplymanager.cpp  zzzreplymanager.h  zzzrequest.cpp  zzzrequest.h  zzzrequestfolder.cpp  zzzrequestfolder.h  zzzrequesttreeitem.cpp  zzzrequesttreeitem.h
libthezzz/providers/: bodyprovider.cpp  bodyprovider.h  descriptionprovider.cpp  descriptionprovider.h  endpointprovider.cpp  endpointprovider.h  environmentprovider.cpp  environmentprovider.h  headersprovider.cpp  headersprovider.h  identifierprovider.cpp  identifierprovider.h  requestcontainerprovider.cpp  requestcontainerprovider.h  settingsprovider.cpp  settingsprovider.h  zzzprovider.cpp  zzzprovider.h  zzzprovides.cpp  zzzprovides.h
libthezzz/translations/: en.ts  en_US.ts  he.ts  vi_VN.ts
libthezzz/widgets/: endpointprovidereditor.cpp  endpointprovidereditor.h  endpointprovidereditor.ui  zzzreplyinspector.cpp  zzzreplyinspector.h  zzzreplyinspector.ui  zzzreplyviewer.cpp  zzzreplyviewer.h  zzzreplyviewer.ui  zzzrequesteditor.cpp  zzzrequesteditor.h  zzzrequesteditor.ui  zzzrequesttreewidget.cpp  zzzrequesttreewidget.h  zzzworkspaceeditor.cpp  zzzworkspaceeditor.h  zzzworkspaceeditor.ui
libthezzz/widgets/providereditor/: bodyprovidereditor.cpp  bodyprovidereditor.h  bodyprovidereditor.ui  descriptionprovidereditor.cpp  descriptionprovidereditor.h  descriptionprovidereditor.ui  environmentprovidereditor.cpp  environmentprovidereditor.h  environmentprovidereditor.ui  headerprovidereditor.cpp  headerprovidereditor.h  headerprovidereditor.ui  providereditor.cpp  providereditor.h  settingsprovidereditor.cpp  settingsprovidereditor.h  settingsprovidereditor.ui
libthezzz/widgets/replyinspector/: jsonbodywidget.cpp  jsonbodywidget.h  jsonbodywidget.ui  replybodywidget.cpp  replybodywidget.h  replybodywidget.ui  replyheaderswidget.cpp  replyheaderswidget.h  replyheaderswidget.ui  replyinspectorwidget.cpp  replyinspectorwidget.h
